Fixed the spacing around the rocket icon a little.

--- a/css/icons.styl
+++ b/css/icons.styl
@@ -10,8 +10,8 @@
   height 28px
   width 28px
 
-.i--20w
-  width 20px
+.i--22w
+  width 22px
 
 .i--thomasjbradley
   background-image embedurl("../img/i-thomasjbradley.svg")
